<resources>
    <string name="app_name">TodasV</string>
    <string name="registrarse">REGISTRARSE</string>
    <string name="log_in">LOG IN</string>
    <string name="contrase_a">contraseña</string>
    <string name="ingresa_tu_correo">Ingresa tu correo</string>
    <string name="s_o_s_home">S.O.S HOME</string>


    <string name="tv1">Registrate Como :</string>
    <string name="buttonCliente">Cliente</string>
    <string name="buttonPrestador">Prestador de Servicios</string>

    <string name="registrate">REGISTRATE</string>
    <string name="NombrePrestador">Nombre</string>
    <string name="ApellidoPrestador">Apellido</string>
    <string name="cc">CC</string>
    <string name="Fecha">Fecha de Expedicion</string>
    <string name="Profesion">Profesion</string>
    <string name="Email">Email</string>
    <string name="buttonRegistroPDS">Siguiente</string>
    <string name="Telef">Telefono</string>


    <string name="selecciona_tu_tipo">SELECCIONA TU TIPO</string>
    <string name="de_arreglo">DE ARREGLO.</string>
    <string name="carpinteria">Carpinteria</string>
    <string name="pintura">pintura</string>
    <string name="plomeria">Plomeria</string>
    <string name="electricidad">electricidad</string>
    <string name="cerrajeria">cerrajeria</string>
    <string name="aseo">aseo</string>
    <string name="cuidado_de_ni_os">cuidado de niños</string>
    <string name="cuidado_de_mascotas">cuidado de mascotas</string>
    <string name="servicio_tecnico">servicio tecnico</string>
    <string name="chef">chef</string>
    <string name="acarreos">acarreos</string>
    <string name="jardineria">jardineria</string>


    <string name="describe_tu_problema">Describe tu problema</string>
    <string name="escribe_la_fecha_de_realizacion_del_arreglo_dd_mm_aa">Escribe la fecha de realizacion del arreglo DD/MM/AA</string>
    <string name="a_ade_una_descripcion_de_tu_problema">Añade una descripcion de tu problema</string>
    <string name="continuar">continuar</string>
    <string name="a_ade_un_nombre_a_tu_problema">Añade un nombre a tu problema</string>

    <string name="selecciona_a_quien_quieres_enviar">Selecciona a quien quieres enviar</string>
    <string name="la_solicitud_del_trabajo">la solicitud del trabajo.</string>
    <string name="a_todos">A TODOS</string>


    <string name="perfil">PERFIL</string>
    <string name="solicitudes">SOLICITUDES</string>
    <string name="solicitudes">SOLICITUDES</string>



</resources>
